--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:8itDhAw4bTq3fEDlW2r63azGuOBG4RTfJH7LX4befPE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -50,3 +50,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+OPEN_DB_BREW_ENDPOINT=https://api.openbrewerydb.org/breweries
